NEW Added SparkK8sOperatorTaskProcessor demo helm charts REMOVED
RENAMED

CHANGED
Task-executor docs